稍稍完善了一下“我的”界面获取网络数据方面有点乱，尝试获取“音乐”界面的榜单失败！！！从”音乐“界面的歌单铺假数据，建了”音乐“下的tablayout，但有时候滑动会卡。

--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -7,12 +7,14 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="3"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="@mipmap/default_album_bg">
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:orientation="horizontal"
-            android:layout_marginTop="50dp">
+            android:layout_marginTop="60dp">
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
@@ -24,28 +26,41 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="立即登录"
+                    android:textSize="13sp"
+                    android:textColor="#ffffff"
                     android:clickable="true"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="收藏的歌曲永不丢失"
+                    android:textSize="13sp"
+                    android:textColor="#ffffff"
                     android:clickable="true"/>
-        </LinearLayout>
+            </LinearLayout>
 
         </LinearLayout>
         <RelativeLayout
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginTop="60dp"
             android:layout_marginRight="15dp">
             <ImageButton
                 android:id="@+id/ib_justListen"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"/>
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="8dp"
+                android:src="@mipmap/ic_mymusic_try_normal"
+                android:background="@null"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="随便听听"/>
+                android:text="随便听听"
+                android:textSize="10sp"
+                android:textColor="#ffffff"
+                android:layout_alignParentRight="true"
+                android:layout_below="@id/ib_justListen"/>
         </RelativeLayout>
 
     </LinearLayout>
@@ -63,12 +78,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"
             android:text="本地音乐"
             android:textSize="13sp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp"
             android:text="119首"
             android:textSize="10sp"/>
         <RelativeLayout
@@ -78,8 +95,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:layout_marginRight="15dp"
-                android:src="@mipmap/bt_artist_item_play_nor"/>
+                android:src="@mipmap/bt_artist_item_play_nor"
+                android:background="@null"/>
         </RelativeLayout>
     </LinearLayout>
     <LinearLayout
@@ -96,12 +113,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"
             android:text="最近播放"
             android:textSize="13sp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp"
             android:text="共0首, 0首离线可播"
             android:textSize="10sp"/>
         <RelativeLayout
@@ -128,12 +147,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"
             android:text="我的下载"
             android:textSize="13sp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp"
             android:text="0首"
             android:textSize="10sp"/>
         <RelativeLayout
@@ -150,14 +171,15 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:padding="5dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="自建歌单"
             android:textSize="13sp"
             android:textColor="#000000"
-            android:layout_marginLeft="10dp"/>
+            android:layout_marginLeft="5dp"/>
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
@@ -167,7 +189,7 @@
                 android:text="新建"
                 android:textSize="10sp"
                 android:layout_alignParentRight="true"
-                android:layout_margin="10dp"/>
+                android:layout_marginRight="15dp"/>
         </RelativeLayout>
     </LinearLayout>
     <LinearLayout
@@ -206,31 +228,42 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1.5">
+        android:layout_weight="1">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="我的收藏"/>
+            android:text="我的收藏"
+            android:textSize="13sp"
+            android:textColor="#000000"
+            android:layout_marginLeft="10dp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="歌单"/>
+            android:text="歌单"
+            android:textSize="13sp"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="110dp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="专辑"/>
+            android:text="专辑"
+            android:textSize="13sp"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="65dp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="歌手"
+            android:textSize="13sp"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="5dp"/>
+            android:layout_marginRight="20dp"/>
 
     </RelativeLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:gravity="center">
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
