--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,25 +7,7 @@
     android:orientation="vertical"
     tools:context="lanou.baidumusic.MainActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
-        <ImageButton
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:src="@mipmap/ic_gengduo_normal"/>
-        <android.support.design.widget.TabLayout
-            android:id="@+id/tb_main"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="4"/>
-        <ImageButton
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"/>
-    </LinearLayout>
+    <include layout="@layout/custom_title"/>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/vp_main"
@@ -73,15 +55,19 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@mipmap/bt_minibar_play_normal"/>
+            android:src="@mipmap/bt_minibar_play_normal"
+            android:background="@null"/>
         <ImageButton
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@mipmap/bt_minibar_next_normal"/>
+            android:src="@mipmap/bt_minibar_next_normal"
+            android:background="@null"/>
         <ImageButton
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:src="@mipmap/bt_minibar_playinglist_normal"
+            android:background="@null"/>
     </LinearLayout>
 </LinearLayout>
