--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -3,6 +3,7 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -16,8 +17,12 @@
             android:orientation="horizontal"
             android:layout_marginTop="60dp">
             <ImageButton
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="5dp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:src="@mipmap/img_titlebar_login"
+                android:background="@null"/>
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -43,7 +48,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="55dp"
             android:layout_marginRight="15dp">
             <ImageButton
                 android:id="@+id/ib_justListen"
@@ -62,8 +67,8 @@
                 android:layout_alignParentRight="true"
                 android:layout_below="@id/ib_justListen"/>
         </RelativeLayout>
-
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -99,6 +104,7 @@
                 android:background="@null"/>
         </RelativeLayout>
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -130,9 +136,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:layout_marginRight="15dp"/>
+                android:src="@mipmap/ic_songlist_detail_nor"/>
         </RelativeLayout>
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -164,9 +171,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:layout_marginRight="15dp"/>
+                android:src="@mipmap/ic_songlist_detail_nor"/>
         </RelativeLayout>
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -189,9 +197,11 @@
                 android:text="新建"
                 android:textSize="10sp"
                 android:layout_alignParentRight="true"
-                android:layout_marginRight="15dp"/>
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="20dp"/>
         </RelativeLayout>
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -211,7 +221,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="我喜欢的单曲"
-                android:textSize="17sp"
+                android:textSize="15sp"
                 android:layout_marginTop="12dp"/>
             <TextView
                 android:layout_width="wrap_content"
@@ -223,8 +233,11 @@
         <ImageView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:layout_marginTop="15dp"
+            android:src="@mipmap/ic_songlist_detail_nor"/>
     </LinearLayout>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -257,8 +270,8 @@
             android:textSize="13sp"
             android:layout_alignParentRight="true"
             android:layout_marginRight="20dp"/>
-
     </RelativeLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -270,11 +283,12 @@
             android:clickable="true">
             <ImageView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:src="@mipmap/icon_tips_login"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="立即登录"
+                android:text="   立即登录"
                 android:textColor="#1fb2f9"/>
             <TextView
                 android:layout_width="wrap_content"
@@ -282,9 +296,11 @@
                 android:text=", 让音乐跟着你走"/>
         </LinearLayout>
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"></LinearLayout>
+        android:layout_weight="1">
+    </LinearLayout>
 
 </LinearLayout>
