--- a/app/src/main/res/layout/fragment_music_playlist_item.xml
+++ b/app/src/main/res/layout/fragment_music_playlist_item.xml
@@ -8,33 +8,29 @@
         android:layout_height="wrap_content"
         android:background="@mipmap/ic_launcher"
         android:id="@+id/rl_playList">
-        <LinearLayout
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true">
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:src="@mipmap/ic_launcher"
-                android:background="@null"
-                android:id="@+id/iv_playList"/>
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="4219"
-                android:textSize="12sp"
-                android:id="@+id/tv_count"/>
-            <ImageButton
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="4"
-                android:src="@mipmap/bt_localmusic_play_nor"
-                android:background="@null"
-                android:id="@+id/ib__playList"/>
-        </LinearLayout>
-
+            android:src="@mipmap/ic_launcher"
+            android:background="@null"
+            android:layout_alignParentBottom="true"
+            android:id="@+id/iv_playList"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="4219"
+            android:textSize="12sp"
+            android:id="@+id/tv_count"
+            android:layout_toRightOf="@id/iv_playList"
+            android:layout_alignTop="@id/iv_playList"/>
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/bt_localmusic_play_nor"
+            android:background="@null"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:id="@+id/ib_playList"/>
     </RelativeLayout>
 
     <TextView
