--- a/app/src/main/res/layout/fragment_dynamic.xml
+++ b/app/src/main/res/layout/fragment_dynamic.xml
@@ -4,4 +4,44 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
+    <ImageButton
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@mipmap/trends_guide_img"
+        android:background="@null"
+        android:scaleType="fitXY"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="10dp">
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="热门话题"/>
+            <ImageView
+                android:id="@+id/iv_dynamic"
+                android:layout_width="wrap_content"
+                android:layout_height="25dp"
+                android:src="@mipmap/ic_songlist_detail_nor"
+                android:layout_alignParentRight="true"/>
+            <Button
+                android:layout_width="40dp"
+                android:layout_height="20dp"
+                android:text="更多"
+                android:textSize="12sp"
+                android:background="@null"
+                android:layout_toLeftOf="@id/iv_dynamic"/>
+        </RelativeLayout>
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+        </android.support.v7.widget.RecyclerView>
+
+    </LinearLayout>
+
 </LinearLayout>
