--- a/app/src/main/res/layout/custom_title.xml
+++ b/app/src/main/res/layout/custom_title.xml
@@ -18,6 +18,7 @@
         android:layout_height="match_parent"
         android:layout_weight="4"/>
     <ImageButton
+        android:id="@+id/ib_search"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
